Bug 269446 - BUG: Keyword-Managing: Folder "People" und subfolder "Unknown" persistent?
Summary: BUG: Keyword-Managing: Folder "People" und subfolder "Unknown" persistent?
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Faces-Engine (other bugs)
Version First Reported In: 2.0.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-26 10:39 UTC by Axel Krebs
Modified: 2012-06-27 10:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.0.0
Sentry Crash Report:


Attachments
showing the undesired folders/subfolder (104.83 KB, image/png)
2011-03-26 10:39 UTC, Axel Krebs
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Axel Krebs 2011-03-26 10:39:36 UTC
Created attachment 58349 [details]
showing the undesired folders/subfolder

Version:           2.0.0 (using KDE 4.6.1) 
OS:                Linux

After erasing these two folders, they re-appear when starting digiKam agian. Space on desktop is limited, so this feature is heavingly annoying.

(guess, this is contributed to the beta-status?)

Reproducible: Always

Steps to Reproduce:
just start digiKam.... ;-) !



OS: Linux (i686) release 2.6.35-28-generic-pae
Compiler: cc
Comment 1 Marcel Wiesweg 2011-03-26 14:57:50 UTC
These are needed for face detection. At the moment, you can rename or move them to get them out of your way. They shouldn't be necessarily created at startup, but when using face detection.
Comment 2 Axel Krebs 2011-03-26 15:29:00 UTC
Am 26.03.2011 14:57, schrieb Marcel Wiesweg:
> https://bugs.kde.org/show_bug.cgi?id=269446
> 
> 
> 
> 
> 
> --- Comment #1 from Marcel Wiesweg <marcel wiesweg gmx de>  2011-03-26 14:57:50 ---
> These are needed for face detection. At the moment, you can rename or move them
> to get them out of your way. They shouldn't be necessarily created at startup,
> but when using face detection.
> 
Marcel:

Thank you for this information. Seems to be necessary. Hmmm...


Axel
Comment 3 Marcel Wiesweg 2011-07-11 17:03:02 UTC
Git commit c75c00745add0e8ec09a9cfcb7e856e3b60babac by Marcel Wiesweg.
Committed on 04/07/2011 at 14:18.
Pushed by mwiesweg into branch 'master'.

Defer creation of the people and unknown-person tags until first use of face detection
For finding the People subfolder, if no such named tag exists, use
a heuristic which takes all existing person tags and uses the topmost parent tag,
instead of forcing recreation of the Person tag ever again.

BUG: 269446

M  +35   -23   utilities/facedetection/faceiface.cpp     

http://commits.kde.org/digikam/c75c00745add0e8ec09a9cfcb7e856e3b60babac