Defer creation of the people and unknown-person tags until first use of face detection For finding the People subfolder, if no such named tag exists, use a heuristic which takes all existing person tags and uses the topmost parent tag, instead of forcing recreation of the Person tag ever again.

BUG: 269446